# cs224n-question-generation

./: README.md  env-cpu.yml  env-gpu.yml  example_question.json  pyproject.toml  requirements.txt
scripts/: download_datasets.py  export_model.py
src/: README.md  env-cpu.yml  env-gpu.yml  evaluate_medical_accuracy.py  fine_tune.py  generate_question.py  requirements.txt  run_example.py
src/colab/: medical_qa_gen_colab.py  model_loader.py  question_generator.py
src/data/: data_loader.py  dataset_schemas.py  preprocess.py
src/data/processed_data/preprocessed_usmle_dataset/: state.json
src/evaluation/: evaluator.py
src/examples/: generate_medical_questions.py
src/models/: model.py  quest_generator.py  response_generator.py
src/tests/: test_model.py
src/training/: trainer.py
src/utils/: prompt_templates.py
