[tool.poetry]
name = "medical-qa-gen"
version = "0.1.0"
description = "Medical question generation using Flan-T5"
authors = ["nahomeh1 <86496110+nahomeh1@users.noreply.github.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
torch = ">=2.0.1,<3.0.0"
transformers = ">=4.36.2,<5.0.0"
datasets = ">=2.15.0,<3.0.0"
tqdm = ">=4.65.0,<5.0.0"
accelerate = ">=0.25.0,<1.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"